<resources>
    <string name="app_name">App SIGRE Movil</string>
    <string name="title_activity_example_tabs">Ejemplo de Tabs</string>
    <string name="one">Uno</string>
    <string name="two">Dos</string>
    <string name="three">Tres</string>
    <string name="title_app">App SIGRE Movil</string>
    <string name="title_activity_left_menu">LeftMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="lblPort">Puerto</string>
    <string name="lblHostIp">IP o Nombre del Host</string>
    <string name="lblNameServer">Nombre del Servidor</string>
    <string name="lblProtocolo">Protocolo</string>

    <string name="btn_Cancelar">CANCELAR</string>
    <string name="btn_Aceptar">ACEPTAR</string>
    <string name="lblServerDefault">Server por defecto</string>
    <string name="btn_Cerrar">Cerrar</string>
    <string name="btn_Editar">Editar</string>
    <string name="title_activity_server_default">CONFIGURACION DEL SERVIDOR POR DEFECTO</string>
    <string name="btn_Listado">Listado</string>
    <string name="lblTitleServerRemote">LISTADO DE SERVIDORES REMOTOS</string>
    <string name="btn_Add">Añadir</string>
    <string name="btn_Save">Guardar</string>
    <string name="lblTitleCambioClave">CAMBIO DE CONTRASEÑA</string>
    <string name="lblIngreseClave">Ingrese nueva clave</string>
    <string name="lblReingreseClave">Confirme nueva clave</string>
    <string name="lblSelectEmpresa">SELECCIONE UNA EMPRESA</string>
    <string name="lblModulo1">TomaPedidos / POS</string>
    <string name="lblDescripcionLogo">App Sigre Movil</string>
    <string name="lblSeparador">Separador</string>
    <string name="lblDescripcionAbout">Acerca</string>
    <string name="lblDescripcionSearch">Buscar</string>
    <string name="lblModulo2">Recepción / Despacho</string>
    <string name="lblModulo3">Compras / Logistica</string>
    <string name="lblModulo4">HORECA</string>
    <string name="lblModulo5">Finanzas</string>
    <string name="lblModulo6">Ventas</string>
    <string name="lblModulo7">SIG</string>
    <string name="lblModulo8">SEGURIDAD</string>
    <string name="lblModulo9">Configuracion</string>
    <string name="lblModulo10">Salida</string>
    <string name="lblModulo11">Asistencia</string>
    <string name="TitleHomeActivity">Bienvenido pagina principal</string>

    <string-array name="protocolos">
        <item>http</item>
        <item>https</item>
    </string-array>

    <string-array name="opciones_almacen">
        <item>01.- Buscar Articulo por SKU</item>
        <item>02.- Recepcion de Articulos - Zapatería</item>
        <item>03.- Toma de Inventario - Cruiser</item>
        <item>04.- Resumen de Inventario capturado</item>
        <item>05.- Reportes de Gestion</item>
        <item>06.- Recepcion de Producto Terminado</item>
        <item>07.- Transferencias /Fusiones de Lotes de PPTT</item>
        <item>08.- Despacho por Pallets / CU Simplificado</item>
        <item>09.- Toma de Inventario por Pallets</item>
        <item>99.- Regresar al menu anterior</item>
    </string-array>


    <string-array name="opciones_compra">
        <item>01.- Registrar Clientes</item>
        <item>99.- Regresar al menu anterior</item>
    </string-array>

    <string-array name="opciones_asistencia">
        <item>01.- Asistencia General</item>
        <item>02.- Asistencia Comedor</item>
        <item>99.- Regresar al menu anterior</item>
    </string-array>

    <string-array name="opciones_venta">
        <item>01.- Listar mis proformas</item>
        <item>99.- Regresar al menu anterior</item>
    </string-array>

    <string name="title_activity_almacen_toma_inventario">Toma de Inventario</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Menu Anterior</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_inventario_pallets">InventarioPalletsActivity</string>
    <string name="title_activity_almacen_parte_recepcion">Recepcion de Articulos - Zapatería</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Titulos para los Tabs de AlmacenDespachoPPTTActivity -->
    <string name="title_tab1">"Packing List / CU(s)"</string>
    <string name="title_tab2">Orden de Venta / Almacen</string>
    <string name="title_activity_asistencia_general">AsistenciaGeneralActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


</resources>
