<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout style="@style/TitleBar">

        <ImageView style="@style/TitleBarLogo"
            android:contentDescription="@string/lblDescripcionLogo"
            android:src="@drawable/title_logo"
            android:layout_width="120dp"/>

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <TextView
            android:id="@+id/tvOrigen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Org [XX]"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:fontFamily="Arial" />

        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/lblDescripcionAbout"
            android:src="@drawable/title_about"
            android:id="@+id/ibAbout"/>

        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/lblDescripcionSearch"
            android:src="@drawable/title_search"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lvMenu">

    </ListView>

</LinearLayout>