<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5sp"
    android:paddingLeft="5sp"
    android:paddingRight="5sp"
    android:paddingTop="5sp"
    android:orientation="vertical"
    tools:context="pe.com.sytco.fastsales.Activities.ServerRemoteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lblTitleServerRemote"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvListServerRemote"
            android:paddingBottom="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|right"
        android:background="@android:color/holo_blue_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nro Servidores:"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginRight="5sp"/>
        <TextView
            android:id="@+id/tvNroRegistros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="000"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginRight="20sp"/>

    </LinearLayout>

    <!-- Bottom Bar -->
    <LinearLayout
        android:id="@+id/llBottomBar"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="10sp"
        android:gravity="center_vertical|right"
        android:paddingBottom="6sp"
        android:paddingRight="6sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:layout_marginRight="5sp"
            android:textSize="15sp"
            android:text="@string/btn_Add"
            android:background="@drawable/boton_rectangular"  />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:layout_marginRight="5sp"
            android:textSize="15sp"
            android:text="@string/btn_Save"
            android:background="@drawable/boton_rectangular"  />

        <Button
            android:id="@+id/btnCerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:textSize="15sp"
            android:text="@string/btn_Cerrar"
            android:background="@drawable/boton_rectangular"  />

    </LinearLayout>

</LinearLayout>
